# yellowbullv3

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: server.py
api/middleware/: __init__.py  api_key_auth.py  rate_limit.py
cli/: __init__.py  repl.py
config/: default.yaml  settings.py
core/: __init__.py  agent.py  context_builder.py  logging_setup.py  session_manager.py  tool_executor.py
core/cache/: __init__.py  manager.py
core/memory/: __init__.py  short_term.py
core/security/: __init__.py  input_validation.py
core/task_queue/: __init__.py  queue.py
docs/: PROJECT_SCAFFOLDING_GUIDE.md  agent-capabilities.md  agent-design.md  p0-design.md
docs/acceptance-criteria/: 01-config-system.md  02-llm-abstraction.md  03-tool-system.md  04-session-manager.md  05-agent-core.md  05-tool-executor.md  06-api-server.md  07-observability.md  08-rag.md  09-memory-system.md  10-security-governance.md  11-cache-layer.md  12-message-queue.md  13-deployment-devops.md  14-code-execution.md  15-multi-agent-collaboration.md  16-evaluation-testing.md  17-frontend-ui.md  18-performance-scalability.md  README.md
docs/modules/: 01-config-system.md  02-llm-abstraction.md  03-tool-system.md  04-session-manager.md  05-agent-core.md  05-tool-executor.md  06-agent-core.md  06-api-server.md  07-knowledge-retrieval.md  (+39 more)
llm/: anthropic_provider.py  base.py  factory.py  openai_provider.py
models/: message.py  session.py
tests/: conftest.py  test_api.py  test_config.py  test_session.py  test_tools.py
tools/: base.py  registry.py
(+9 files in other folders)
