[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yellowbull-agent"
version = "0.1.0"
description = "A general-purpose AI agent with tool calling, session management, and multi-provider LLM support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "openai>=1.58",
    "anthropic>=0.42",
    "duckduckgo-search>=7.2",
    "tiktoken>=0.9",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
yellowbull = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
